initial  style guide

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <link rel="stylesheet" href="Styles/index.css">
 </head>
 <body>
-  
+  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum magnam ducimus cumque nisi autem odit, ab, dolorem iure eligendi assumenda illo laudantium quia. Culpa amet minima explicabo necessitatibus provident sapiente.</p>
 </body>
 </html>
