--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Travelgram | Perfil de viagens </title>
   <link rel="stylesheet" href="Styles/index.css">
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
 </head>
 <body>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum magnam ducimus cumque nisi autem odit, ab, dolorem iure eligendi assumenda illo laudantium quia. Culpa amet minima explicabo necessitatibus provident sapiente.</p>
+  
 </body>
 </html>
