--- a/index.html
+++ b/index.html
@@ -12,6 +12,26 @@
   <meta charset="UTF-8">
 </head>
 <body>
-  
+  <nav>
+      <a href="#" id="logo"></a>
+      <img src="assets/Logo.svg" alt="logomarca">
+      
+      <ul id="primary-menu"> 
+        <li>
+          <a href="#">
+          <img src="assets/Icons/MagnifyingGlass.svg" alt="Icone de pesquisa lupa">
+          </a>
+        </li> 
+        <li><a href="#">Explorer</a></li>
+        <li><a href="#">Minhas viagens</a></li>
+        <li><a href="#">
+          <img src="assets/Profile pic.png" alt="Imagem Isabela Torres">
+        </a>
+        </li> 
+      </ul>
+  </nav>
+  <header>
+
+  </header>
 </body>
 </html>
