--- a/index.html
+++ b/index.html
@@ -13,20 +13,21 @@
 </head>
 <body>
   <nav>
-      <a href="#" id="logo"></a>
+    <a href="#" id="logo">
       <img src="assets/Logo.svg" alt="logomarca">
-      
+    </a>
+
       <ul id="primary-menu"> 
         <li>
           <a href="#">
-          <img src="assets/Icons/MagnifyingGlass.svg" alt="Icone de pesquisa lupa">
+            <img src="assets/Icons/MagnifyingGlass.svg" alt="Icone de pesquisa lupa">
           </a>
         </li> 
         <li><a href="#">Explorer</a></li>
         <li><a href="#">Minhas viagens</a></li>
         <li><a href="#">
           <img src="assets/Profile pic.png" alt="Imagem Isabela Torres">
-        </a>
+          </a>
         </li> 
       </ul>
   </nav>
