--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <meta charset="UTF-8">
 </head>
 <body>
-  <nav>
+  <div class="bg-surface-color">
+  <nav class="container">
+
     <a href="#" id="logo">
       <img src="assets/Logo.svg" alt="logomarca">
     </a>
@@ -30,6 +32,7 @@
           </a>
         </li> 
       </ul>
+  </div>
   </nav>
   <header>
 
