--- a/index.html
+++ b/index.html
@@ -32,10 +32,32 @@
           </a>
         </li> 
       </ul>
-  </div>
   </nav>
   <header>
-
+    <div class="container">
+      <div id="profile">
+        <img src="assets/Profile pic.png" alt="Imagem Isabela Torres">
+      <div>   
+        <h1>Isabela Torres</h1>
+        <p>
+          Amante de viagens, cultura e gastronomia. 🌍✈️ <br>
+          Aqui compartilho as histórias registradas em cada clique, explorando cantinhos fascinantes do nosso planeta a partir da movimentada cidade de São Paulo. 🏙️📸
+        </p>
+      </div>
+      <ul id="info">
+        <li>
+          <img src="assets/Icons/MapPin.svg" alt="Icone mapa ping">
+          <span>São Paulo, Brazil</span>          
+        </li>
+        <li>
+          <img src="assets/Icons/AirplaneTilt.svg" alt="Icone avião">
+          <span>37 países</span>
+        </li>
+        <li>
+          <img src="assets/Icons/Image.svg" alt="Imagem ">
+          <span>240 fotos</span>
+        </li>
+      </ul>
   </header>
 </body>
 </html>
