--- a/index.html
+++ b/index.html
@@ -66,6 +66,25 @@
       </div>
     </div>       
   </header>
-</div> 
+  </div> 
+  <main class="container">
+    <img src="assets/Imagens/Image 01.png" alt="">
+    <img src="assets/Imagens/Image 02.png" alt=""> 
+    <img src="assets/Imagens/Image 03.png" alt=""> 
+    <img src="assets/Imagens/Image 04.png" alt=""> 
+    <img src="assets/Imagens/Image 05.png" alt=""> 
+    <img src="assets/Imagens/Image 06.png" alt=""> 
+    <img src="assets/Imagens/Image 07.png" alt=""> 
+    <img src="assets/Imagens/Image 08.png" alt=""> 
+    <img src="assets/Imagens/Image 09.png" alt=""> 
+    <img src="assets/Imagens/Image 10.png" alt=""> 
+    <img src="assets/Imagens/Image 11.png" alt="">
+    <img src="assets/Imagens/Image 12.png" alt="">
+  </main>
+  <footer class="container">
+    <span>Travelgram © 2024</span>
+    <span>Travelgram © 2024</span>
+    <span>Travelgram © 2024</span>
+  </footer>
 </body>
 </html>
