--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
         <img src="assets/Profile pic.png" alt="imagem Isabela">
         <h1> Isabela Torres
           
-        <p> Amante de viagens, cultura e gastronomia. 🌍✈️ <br>Aqui compartilho as histórias registradas em cada <br>
-          lique, explorando cantinhos fascinantes do nosso <br> planeta a partir da movimentada cidade de São <br>
-          Paulo. 🏙️📸 
+        <p> Amante de viagens, cultura e gastronomia. 🌍✈️ Aqui compartilho as histórias registradas em cada 
+          lique, explorando cantinhos fascinantes do nosso  planeta a partir da movimentada cidade de São Paulo. 🏙️📸 
         </p>
         </h1>
       </div>
@@ -59,7 +58,8 @@
         </li>
         <li>
           <img src="assets/Icons/Image.svg" alt="">
-          <span>240 fotos</span>
+          <span>240 fotos
+          </span>
         </li>
       </div>
       </ul>    
